# dyndns-daemon

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Readme.md  jenkins.sh  test.key
res/: config.env  config.sh  config.toml  zonefile.tpl
src/: config.rs  dns.rs  dotenv.rs  envvars.rs  errors.rs  http.rs  main.rs  openpgp.rs  server.rs  template.rs
