[package]
name = "dyndns-daemon"
version = "1.0.0"
authors = ["Simon Roosen <simon@firepulse.de>"]

publish = false

readme = "README"

license = "MIT"

[profile.release]
lto = true

[dependencies]
lettre = "0.6"
error-chain = "0.11.0"
chrono = "0.2"
hyper = "0.10.4"
envy = "0.1.2"
dotenv = { version = "0.8.0", optional = true }
serde = "0.8.*"
serde_derive = "0.8.*"
slog = { version = "1.2", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "1.3.5"
clippy = { version = "*", optional = true }
itertools = "0.5.9"
consistenttime = "0.2.0"

[dev-dependencies]
quickcheck = "0.6.2"
quickcheck_macros = "0.6.1"

[features]

default = []
use_dotenv = ["dotenv"]
