[package]
name = "dyndns-daemon"
version = "1.0.0"
authors = ["Simon Roosen <simon@firepulse.de>"]

publish = false

readme = "README"

license = "MIT"

[profile.release]
lto = true

[dependencies]
lettre = "0.6"
error-chain = "0.11.0"
chrono = "0.2"
hyper = "0.10.4"
envy = "0.3.2"
dotenv = { version = "0.8.0", optional = true }
serde = "1.0"
serde_derive = "1.0"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3.0"
slog-term = "2.4.0"
clippy = { version = "*", optional = true }
itertools = "0.5.9"
consistenttime = "0.2.0"

[dev-dependencies]
quickcheck = "0.6.2"
quickcheck_macros = "0.6.1"

[features]

default = []
use_dotenv = ["dotenv"]
